force-app/main/default/objects/Account/fields/Invoice_Language__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Language__c</fullName>
    <label>Invoice Language</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Record_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Khmer</fullName>
            </value>
            <value>
                <fullName>Lao</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Malay</fullName>
            </value>
            <value>
                <fullName>Taiwanese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>