force-app/main/default/objects/Account/fields/Invoice_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Method__c</fullName>
    <description>SP-2717</description>
    <label>Invoice Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Online Payment</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>KSP Budget</fullName>
            </value>
            <value>
                <fullName>Online Payment Debtor</fullName>
            </value>
            <value>
                <fullName>Online Payment Owner Change / Legal Change</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Aman</fullName>
            </value>
            <value>
                <fullName>Fawry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>