force-app/main/default/objects/Account/fields/Invoice_Transmission_method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Transmission_method__c</fullName>
    <description>Invoice Transmission method for AU</description>
    <inlineHelpText>For e.x. Invoices would send to the customer by email, post, Fax</inlineHelpText>
    <label>Invoice Transmission method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>