force-app/main/default/objects/Account/fields/Is_Apex__c.field-meta.xml
<CustomField>
    <fullName>Is_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is controlled from the Apex class and used in the validation rules.</description>
    <label>Is Apex</label>
    <type>Checkbox</type>
</CustomField>