force-app/main/default/objects/Account/fields/is_successfull__c.field-meta.xml
<CustomField>
    <fullName>is_successfull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is successfull</label>
    <type>Checkbox</type>
</CustomField>