force-app/main/default/objects/Account/fields/Is_Tested__c.field-meta.xml
<CustomField>
    <fullName>Is_Tested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for the terminal test order send or not</description>
    <label>Order Tested</label>
    <type>Checkbox</type>
</CustomField>