force-app/main/default/objects/Account/fields/Key_VIP_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_VIP_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true --&gt; this means this a important account, is defined by each country</description>
    <label>Key / VIP Account</label>
    <type>Checkbox</type>
</CustomField>