force-app/main/default/objects/Account/fields/Kill_Rate_Category__c.field-meta.xml
<CustomField>
    <fullName>Kill_Rate_Category__c</fullName>
    <description>Kill rate category, synced from DWH through talend job</description>
    <label>Kill Rate Category</label>
    <length>2</length>
    <type>Text</type>
</CustomField>