force-app/main/default/objects/Account/fields/Last_Dunned__c.field-meta.xml
<CustomField>
    <fullName>Last_Dunned__c</fullName>
    <label>Last Dunned</label>
    <type>Date</type>
</CustomField>