force-app/main/default/objects/Account/fields/Last_NPS_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_NPS_Date__c</fullName>
    <label>Last NPS Date</label>
    <type>Date</type>
</CustomField>