force-app/main/default/objects/Account/fields/LastRemoteUpsert__c.field-meta.xml
<CustomField>
    <fullName>LastRemoteUpsert__c</fullName>
    <description>Used to set a last successful upsert timestamp at the remote account.</description>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to set a last successful upsert timestamp at the remote account.</inlineHelpText>
    <label>Last Remote Upsert</label>
    <type>DateTime</type>
</CustomField>