force-app/main/default/objects/Account/fields/Lead_Data_Origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_Data_Origin__c</fullName>
    <description>SP-2251 : lead organiser</description>
    <inlineHelpText>Shows the Websites etc. that a Lead came from.</inlineHelpText>
    <label>Lead Data Origin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>