force-app/main/default/objects/Account/fields/Lead_Person_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Lead_Person_in_Charge__c</fullName>
    <label>Lead Person in Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SAL-이도화</fullName>
            </value>
            <value>
                <fullName>SAL-이민지</fullName>
            </value>
            <value>
                <fullName>SAL-한혜빈</fullName>
            </value>
            <value>
                <fullName>sample</fullName>
            </value>
            <value>
                <fullName>공지용</fullName>
            </value>
            <value>
                <fullName>김민지</fullName>
            </value>
            <value>
                <fullName>김혜진</fullName>
            </value>
            <value>
                <fullName>방민지</fullName>
            </value>
            <value>
                <fullName>이민호</fullName>
            </value>
            <value>
                <fullName>이지영</fullName>
            </value>
            <value>
                <fullName>임수하</fullName>
            </value>
            <value>
                <fullName>조영수</fullName>
            </value>
            <value>
                <fullName>최윤선</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>