force-app/main/default/objects/Account/fields/Legal_form__c.field-meta.xml
<CustomField>
    <fullName>Legal_form__c</fullName>
    <description>Created during DE migration, displayed on the quote for new acquisiton</description>
    <label>Legal form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GmbH</fullName>
            </value>
            <value>
                <fullName>Einzelunternehmen</fullName>
            </value>
            <value>
                <fullName>OHG</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>GmbH &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>GbR</fullName>
            </value>
            <value>
                <fullName>LTD &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>UG (haftungsbeschränkt)</fullName>
            </value>
            <value>
                <fullName>UG (haftungsbeschränkt) &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>GmbH i.G.</fullName>
            </value>
            <value>
                <fullName>gGmbH</fullName>
            </value>
            <value>
                <fullName>e.K.</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>eG</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
                <isActive>false</isActive>
                <label>UG</label>
            </value>
            <value>
                <fullName>UG &amp; Co. KG</fullName>
                <isActive>false</isActive>
                <label>UG &amp; Co. KG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>