force-app/main/default/objects/Account/fields/Local_Traffic__c.field-meta.xml
<CustomField>
    <fullName>Local_Traffic__c</fullName>
    <description>Volume of motor and pedestrian traffic nearby the restaurant to judge upon the value to offer branding to the restaurant.</description>
    <inlineHelpText>Volume of motor and pedestrian traffic nearby the restaurant to judge upon the value to offer branding to the restaurant.</inlineHelpText>
    <label>Local Traffic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Traffic</fullName>
            </value>
            <value>
                <fullName>Mid Traffic</fullName>
            </value>
            <value>
                <fullName>Low Traffic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>