force-app/main/default/objects/Account/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts Main Contact</relationshipLabel>
    <relationshipName>AccountsMainContact</relationshipName>
    <type>Lookup</type>
</CustomField>