force-app/main/default/objects/Account/fields/Manual_Orders_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Manual_Orders_Last_Month__c</fullName>
    <label>Manual Orders - Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>