force-app/main/default/objects/Account/fields/Manual_Orders_Total__c.field-meta.xml
<CustomField>
    <fullName>Manual_Orders_Total__c</fullName>
    <label>Manual Orders - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>