force-app/main/default/objects/Account/fields/Mark_up_Value__c.field-meta.xml
<CustomField>
    <fullName>Mark_up_Value__c</fullName>
    <label>Mark-up Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>