force-app/main/default/objects/Account/fields/Maximum_Order_Payment__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Order_Payment__c</fullName>
    <label>Maximum Order Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>