force-app/main/default/objects/Account/fields/Menu_Image_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Menu_Image_Coverage__c</fullName>
    <description>Percentage of items on the menu that have an image to them.</description>
    <inlineHelpText>Percentage of items on the restaurant menu that have a photo.</inlineHelpText>
    <label>Menu Image Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>