force-app/main/default/objects/Account/fields/Menu_Tax_Information__c.field-meta.xml
<CustomField>
    <fullName>Menu_Tax_Information__c</fullName>
    <label>Menu Tax Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Included</fullName>
            </value>
            <value>
                <fullName>Tax To Be Added</fullName>
            </value>
            <value>
                <fullName>Tax Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>