force-app/main/default/objects/Account/fields/Menu_Typing_By_User__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typing_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this holds the information who has done the menu typing</description>
    <label>Menu Typing By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>