force-app/main/default/objects/Account/fields/Menu_Typing_Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typing_Date_Start__c</fullName>
    <description>this give you the date when the menu is can started to type , this means opp is wonn</description>
    <label>Menu Typing Date Start</label>
    <type>DateTime</type>
</CustomField>