force-app/main/default/objects/Account/fields/Menu_Typing_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typing_Progress_Status__c</fullName>
    <description>New = not started</description>
    <label>Menu Typing Progress Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Final Check</fullName>
            </value>
            <value>
                <fullName>Take Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>