force-app/main/default/objects/Account/fields/MIDASApiException__c.field-meta.xml
<CustomField>
    <fullName>MIDASApiException__c</fullName>
    <label>MIDASApiException</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>