force-app/main/default/objects/Account/fields/Minimum_order_value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_order_value__c</fullName>
    <label>Minimum order value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>