force-app/main/default/objects/Account/fields/Minimum_order_value_Cash__c.field-meta.xml
<CustomField>
    <fullName>Minimum_order_value_Cash__c</fullName>
    <label>Minimum order value - Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>