force-app/main/default/objects/Account/fields/No_paper_bag_reason__c.field-meta.xml
<CustomField>
    <fullName>No_paper_bag_reason__c</fullName>
    <label>No paper bag reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does Not Want to Pay</fullName>
            </value>
            <value>
                <fullName>No Storage Space</fullName>
            </value>
            <value>
                <fullName>Own Bags</fullName>
            </value>
            <value>
                <fullName>Pizza Restaurant</fullName>
            </value>
            <value>
                <fullName>Prefer Different Material</fullName>
            </value>
            <value>
                <fullName>Unsuitable Size</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>