force-app/main/default/objects/Account/fields/Non_cont_Franchise_Branches__c.field-meta.xml
<CustomField>
    <fullName>Non_cont_Franchise_Branches__c</fullName>
    <description>Non-cont. Franchise Branches</description>
    <label>Non-cont. Franchise Branches</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>