force-app/main/default/objects/Account/fields/Non_Contracted__c.field-meta.xml
<CustomField>
    <fullName>Non_Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for SP-35</description>
    <label>Non Contracted</label>
    <type>Checkbox</type>
</CustomField>