force-app/main/default/objects/Account/fields/NPS_Count__c.field-meta.xml
<CustomField>
    <fullName>NPS_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NPS Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>