force-app/main/default/objects/Account/fields/NPS_Response_History__c.field-meta.xml
<CustomField>
    <fullName>NPS_Response_History__c</fullName>
    <label>NPS Response History</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>