force-app/main/default/objects/Account/fields/Offline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Offline_Reason__c</fullName>
    <label>Offline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agreement issues</fullName>
            </value>
            <value>
                <fullName>Closed temporarily</fullName>
            </value>
            <value>
                <fullName>Delivery area issues</fullName>
            </value>
            <value>
                <fullName>Delivery hours issues</fullName>
            </value>
            <value>
                <fullName>Email issues</fullName>
            </value>
            <value>
                <fullName>Fax issues</fullName>
            </value>
            <value>
                <fullName>Invoice issues</fullName>
            </value>
            <value>
                <fullName>Menu issues</fullName>
            </value>
            <value>
                <fullName>No delivery service</fullName>
            </value>
            <value>
                <fullName>Not enough orders</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Terminal issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>