force-app/main/default/objects/Account/fields/ON_Direct_Debit_Granted__c.field-meta.xml
<CustomField>
    <fullName>ON_Direct_Debit_Granted__c</fullName>
    <description>SP-1771 (for JustON)</description>
    <label>Direct Debit Granted</label>
    <type>Date</type>
</CustomField>