force-app/main/default/objects/Account/fields/ON_Direct_Debit_Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>ON_Direct_Debit_Mandate_Reference__c</fullName>
    <description>SP-1771 (for JustON)</description>
    <label>Direct Debit Mandate Reference</label>
    <length>35</length>
    <type>Text</type>
</CustomField>