force-app/main/default/objects/Account/fields/ON_ForceUpsert__c.field-meta.xml
<CustomField>
    <fullName>ON_ForceUpsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the upsert to the billing org will be forced.</description>
    <inlineHelpText>If checked, the upsert to the billing org will be forced.</inlineHelpText>
    <label>Connector: Force Upsert</label>
    <type>Checkbox</type>
</CustomField>