force-app/main/default/objects/Account/fields/ON_UpsertableSE__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertableSE__c</fullName>
    <formula>OR( RecordType.DeveloperName = &quot;SE_Account&quot;,RecordType.DeveloperName = &quot;FI_Account&quot;)
&amp;&amp;
(
ISPICKVAL( Account_Status__c , &quot;Menu Processing&quot;) 
|| 
ISPICKVAL(Account_Status__c, &quot;Onboarding&quot;) 
|| 
ISPICKVAL(Account_Status__c, &quot;Active&quot;) 
|| 
ISPICKVAL(Account_Status__c, &quot;Terminated&quot;)
) 
&amp;&amp; (NOT( Mark_for_Testing_Training__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connector: Upsertable SE</label>
    <type>Checkbox</type>
</CustomField>