force-app/main/default/objects/Account/fields/Online_Since__c.field-meta.xml
<CustomField>
    <fullName>Online_Since__c</fullName>
    <description>this fields indicates date &amp; times since the Restaurant was made Online</description>
    <label>Online Since</label>
    <type>DateTime</type>
</CustomField>