force-app/main/default/objects/Account/fields/Online_Status__c.field-meta.xml
<CustomField>
    <fullName>Online_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this indicates if the Restaurant is Online</description>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>