force-app/main/default/objects/Account/fields/Online_Status_Backend__c.field-meta.xml
<CustomField>
    <fullName>Online_Status_Backend__c</fullName>
    <label>Online Status Backend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Online_Status</valueSetName>
    </valueSet>
</CustomField>