force-app/main/default/objects/Account/fields/OPEX_non_rent__c.field-meta.xml
<CustomField>
    <fullName>OPEX_non_rent__c</fullName>
    <inlineHelpText>These are other recurring Facility expenses excluding rent</inlineHelpText>
    <label>OPEX non-rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>