force-app/main/default/objects/Account/fields/OPEX_rent__c.field-meta.xml
<CustomField>
    <fullName>OPEX_rent__c</fullName>
    <inlineHelpText>This is the rent paid for the Facility</inlineHelpText>
    <label>OPEX rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>