force-app/main/default/objects/Account/fields/Ops_Category__c.field-meta.xml
<CustomField>
    <fullName>Ops_Category__c</fullName>
    <description>Ops category, synced from DWH through talend job</description>
    <label>Ops Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>