force-app/main/default/objects/Account/fields/Order_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Order_Current_Month__c</fullName>
    <description>Order number from the current month</description>
    <label>Order Current Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>