force-app/main/default/objects/Account/fields/Order_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Order_Last_Month__c</fullName>
    <description>Total orders from the last month</description>
    <label>Order Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>