force-app/main/default/objects/Account/fields/OrdersCanceledByRestaurantCurrentMonth__c.field-meta.xml
<CustomField>
    <fullName>OrdersCanceledByRestaurantCurrentMonth__c</fullName>
    <label>OrdersCancelled by Restaurant This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>