force-app/main/default/objects/Account/fields/OrdersCanceledByRestaurantLastMonth__c.field-meta.xml
<CustomField>
    <fullName>OrdersCanceledByRestaurantLastMonth__c</fullName>
    <label>OrdersCanceled by Restaurant Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>