force-app/main/default/objects/Account/fields/OrdersCanceledByRestaurantTotal__c.field-meta.xml
<CustomField>
    <fullName>OrdersCanceledByRestaurantTotal__c</fullName>
    <inlineHelpText>Total orders cancelled by restaurant</inlineHelpText>
    <label>OrdersCanceled by Restaurant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>