force-app/main/default/objects/Account/fields/OrdersDeclinedByRestaurantCurrentMonth__c.field-meta.xml
<CustomField>
    <fullName>OrdersDeclinedByRestaurantCurrentMonth__c</fullName>
    <label>OrdersDeclined by Restaurant This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>