force-app/main/default/objects/Account/fields/OrdersDeclinedByRestaurantLastMonth__c.field-meta.xml
<CustomField>
    <fullName>OrdersDeclinedByRestaurantLastMonth__c</fullName>
    <label>OrdersDeclined by Restaurant Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>