force-app/main/default/objects/Account/fields/OrdersDeclinedByRestaurantTotal__c.field-meta.xml
<CustomField>
    <fullName>OrdersDeclinedByRestaurantTotal__c</fullName>
    <inlineHelpText>Total orders declined by restaurant</inlineHelpText>
    <label>OrdersDeclined by Restaurant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>