force-app/main/default/objects/Account/fields/Owner_Backend__c.field-meta.xml
<CustomField>
    <fullName>Owner_Backend__c</fullName>
    <label>Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>