force-app/main/default/objects/Account/fields/Owner_Bank_Account_Legal_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Owner_Bank_Account_Legal_Ref_No__c</fullName>
    <label>Owner Bank Account - Legal Ref No.</label>
    <length>38</length>
    <type>Text</type>
</CustomField>