force-app/main/default/objects/Account/fields/Packaging_Cost__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Cost__c</fullName>
    <description>SP-3847</description>
    <label>Packaging Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>