force-app/main/default/objects/Account/fields/Paid_Period_Of_Application__c.field-meta.xml
<CustomField>
    <fullName>Paid_Period_Of_Application__c</fullName>
    <description>Paid Period Of Application</description>
    <label>Paid Period Of Application</label>
    <type>Date</type>
</CustomField>