force-app/main/default/objects/Account/fields/Paper_Bag_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Paper_Bag_Check_Date__c</fullName>
    <label>Paper Bag Check Date</label>
    <type>Date</type>
</CustomField>