force-app/main/default/objects/Account/fields/Paper_Bag_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Paper_Bag_Consumption__c</fullName>
    <label>Paper Bag Consumption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High (2.0 Bags per Order)</fullName>
            </value>
            <value>
                <fullName>Above Average (1.5 Bags per Order)</fullName>
            </value>
            <value>
                <fullName>Average (1.1 Bags per Order)</fullName>
            </value>
            <value>
                <fullName>Low (0.7 Bags per Order)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>