force-app/main/default/objects/Account/fields/Paper_Bag_Stock__c.field-meta.xml
<CustomField>
    <fullName>Paper_Bag_Stock__c</fullName>
    <label>Paper Bag Stock</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>