force-app/main/default/objects/Account/fields/Password_box__c.field-meta.xml
<CustomField>
    <fullName>Password_box__c</fullName>
    <label>Terminal password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>