force-app/main/default/objects/Account/fields/Payout_Method__c.field-meta.xml
<CustomField>
    <fullName>Payout_Method__c</fullName>
    <description>#JIRA SSC-795</description>
    <label>Payout Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Post</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>